Scrollbar fix

--- a/public/obsidian.css
+++ b/public/obsidian.css
@@ -1,6 +1,18 @@
 
 * { box-sizing: border-box }
 
+*-webkit-scrollbar {
+  width: 9px;
+}
+*-webkit-scrollbar-track {
+  background: transparent;
+}
+*-webkit-scrollbar-thumb {
+  background-color: rgba(155, 155, 155, 0.5);
+  border-radius: 20px;
+  border: transparent;
+}
+
 /* VARIABLES */
 
 :root {
@@ -495,7 +507,7 @@ select {
 
 #lastPosts .content {
   max-height: 300px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 /* WYSIWYG - TipTap/ProseMirror */
